# AutomationPlayground

./: .gitignore  README.md  generate_files.py  main.py  pyproject.toml
file_extension_changer/: README.md  main.py
shared_utils/: __init__.py
src/file_extension_changer/: generate_files.py  main.py
src/shared_utils/: files.py
